[gd_scene load_steps=4 format=3 uid="uid://bxm3jiyoixyf0"]

[ext_resource type="Script" path="res://Scripts/Inventory Scripts/InventorySlot.gd" id="1_kuoyv"]
[ext_resource type="Texture2D" uid="uid://dgep8w3f40ipy" path="res://assets/Custom Sprites/InventorySlot.png" id="2_a4e2e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n2nn8"]
size = Vector2(16, 16)

[node name="InventorySlot" type="Control"]
self_modulate = Color(1, 1, 1, 0.219608)
custom_minimum_size = Vector2(16, 16)
layout_mode = 3
anchors_preset = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
mouse_filter = 2
script = ExtResource("1_kuoyv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 8)
texture = ExtResource("2_a4e2e")

[node name="ItemSprite2D" type="Sprite2D" parent="."]
position = Vector2(8, 8)

[node name="ItemCountLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 1.0
offset_right = 41.0
offset_bottom = 23.0
scale = Vector2(0.35, 0.35)
horizontal_alignment = 2
clip_text = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_n2nn8")

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
